# inc_diagnostics

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  pyproject.toml  versions.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/gitlint/: action.yml
.github/workflows/: build_linux.yml  daily.yml  docs-cleanup.yml  docs.yml  gitlint.yml  license_check.yml  on-daily.yml
main/: genindex.html  index.html  schema_violations.json  search.html
patches/: BUILD.bazel  classic-diagnostic-adapter-expose-tokio.patch  opensovd-core-cargo-bazel-lock.patch  opensovd-core-expose-tokio.patch
pr-1/: genindex.html  index.html  search.html
pr-10/: index.html  schema_violations.json
pr-11/: index.html
pr-13/: index.html  schema_violations.json
pr-14/: genindex.html  index.html
pr-15/: index.html  schema_violations.json
pr-2/: genindex.html  index.html  schema_violations.json  search.html
pr-3/: genindex.html  index.html
pr-4/: genindex.html  index.html  schema_violations.json  search.html
pr-5/: index.html  schema_violations.json  search.html
pr-6/: genindex.html  index.html  schema_violations.json
pr-7/: index.html  schema_violations.json
pr-8/: index.html  schema_violations.json
pr-9/: index.html  schema_violations.json
score/examples/sovd-client/: BUILD
score/examples/sovd-client/src/: main.rs
score/examples/sovd-client/tests/: integration.rs
score/mw/diag/: BUILD  byte_types.cpp  byte_types.h  diag_result.cpp  diag_result.h
score/mw/diag/api/: BUILD  common.rs  data_resource.rs  diag_api.rs  operation.rs  simple_operation.rs  uds.rs  uds_adapters.rs
score/mw/diag/api_cpp/: BUILD  data_resource.h  data_resource_mock.h  data_resource_test.cpp  diag.h  dtc.h  dtc_mock.h  operation.h  operation_mock.h  operation_test.cpp  result.h  result_test.cpp  simple_operation.h  simple_operation_mock.h  simple_operation_test.cpp  sovd_error.h  sovd_error_test.cpp  uds.h  uds_adapters.h  uds_adapters_test.cpp  uds_mock.h  uds_test.cpp
score/mw/diag/api_cpp/common/: BUILD  byte_types.h  diag_result.h
score/mw/diag/api_cpp/uds/: BUILD  generic_data_identifier.cpp  generic_data_identifier.h  generic_data_identifier_mock.h  generic_data_identifier_test.cpp  generic_service.cpp  generic_service.h  generic_service_mock.h  generic_service_test.cpp  negative_response_code.h  negative_response_code_test.cpp  read_data_by_identifier.cpp  read_data_by_identifier.h  read_data_by_identifier_mock.h  read_data_by_identifier_test.cpp  routine_control.cpp  routine_control.h  routine_control_mock.h  routine_control_test.cpp  write_data_by_identifier.cpp  write_data_by_identifier.h  write_data_by_identifier_mock.h  write_data_by_identifier_test.cpp
score/mw/diag/design/: .gitignore  diag_api_rust.puml
score/mw/diag/example/: diag_runtime.rs  example.rs  lib_runtime.rs
score/mw/diag/uds/: BUILD  generic_data_identifier.cpp  generic_data_identifier.h  generic_data_identifier_mock.h  generic_service.cpp  generic_service.h  generic_service_mock.h  generic_service_test.cpp  meta_data.cpp  meta_data.h  mocks.cpp  negative_response_code.cpp  negative_response_code.h  negative_response_code_test.cpp  read_data_by_identifier.cpp  read_data_by_identifier.h  read_data_by_identifier_mock.h  routine_control.cpp  routine_control.h  routine_control_mock.h  routine_control_test.cpp  uds.cpp  write_data_by_identifier.cpp  write_data_by_identifier.h  write_data_by_identifier_mock.h
score/opensovd-cda/: BUILD  opensovd-cda.sample.toml
score/opensovd-cda/mdd/: functional_groups.mdd  functional_groups.mdd.license
score/opensovd-cda/src/: main.rs
score/opensovd-cda/tests/: integration.rs
score/opensovd-gateway/: BUILD
score/opensovd-gateway/src/: main.rs
tests/cpp/: test_main.cpp
