# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "cpp_rust_template_repository",
    version = "1.0",
)

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.1", dev_dependency = True)
bazel_dep(name = "score_toolchains_rust", version = "0.8.0", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(gcc, "score_gcc_aarch64_toolchain", "score_gcc_x86_64_toolchain")

bazel_dep(name = "rules_python", version = "1.5.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.67.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.17")

# LLVM Toolchains Rules - host configuration
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# tooling
bazel_dep(name = "score_tooling", version = "1.1.2")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

#docs-as-code
bazel_dep(name = "score_docs_as_code", version = "2.0.3")
bazel_dep(name = "score_baselibs", version = "0.2.8")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

# FIXME: To be removed after https://github.com/eclipse-score/baselibs/issues/266 is resolved
single_version_override(
    module_name = "grpc-java",
    version = "1.70.0",
)

# Provide the tools from the devcontainer to Bazel
bazel_dep(name = "score_devcontainer", version = "1.7.0")
